--- a/index.html
+++ b/index.html
@@ -134,6 +134,6 @@
         <input type="reset" value="Скасувати"/>
     </form>
     <br>
-    <a href="table.html">Перйти на наступну сторінку</a>
+    <a href="table.html">Семантичні елементи та таблиця</a>
 </body>
 </html>
